# lexichat

./: .gitignore  BUILDING.md  CLAUDE.md  COMMERCIAL_LICENSE.md  README.md  TESTING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  notary-check.yml  release.yml  test.yml
e2e/: app.spec.ts  mock-tauri.ts
openAPISpecs/: arXivSearch.json  companieshouse.json  gmail.json  google-drive.json
public/: pyodide-worker.js
scripts/: lexi-dev.mjs  prepare-pyodide.mjs
src/: AdminPanel.tsx  App.css  App.tsx  ChatParamsPanel.tsx  DebugPanel.tsx  HistoryPanel.tsx  JobsPanel.tsx  jobTypes.ts  main.tsx  profileIO.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  job_designer.rs  jobs.rs  lib.rs  mcp.rs  ollama.rs  openapi.rs  report.rs  sandbox.rs  sparql.rs  tools.rs  wiki.rs
src-tauri/tests/fixtures/: mcp-stub.js
src/pyodide/: runner.ts
src/test/: McpAppFrame.test.tsx  extractSpecMeta.test.ts  profileIO.test.ts  settings.test.ts  setup.ts
website/: example.html  index.html  profiles.html  video-script.md
website/docs/: configuration.html  features.html  getting-started.html  index.html  integrations.html  scheduled-jobs.html  settings.html  tools.html
website/profiles/: local-area.json  parliament.json  research-scout.json
