[package]
name = "lexichat"
version = "1.9.5"
description = "LexiChat — Local AI Agent"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
futures-util = "0.3"
urlencoding = "2"
anyhow = "1"
tauri-plugin-dialog = "2.7.0"
dirs = "6.0.0"
pdf-extract = "0.7"
base64 = "0.22"
url = { version = "2", features = ["serde"] }
zip = "2"
printpdf = "0.6"
chrono = { version = "0.4", features = ["serde"] }
# Sandboxed Python interpreter for the run_python code-execution tool.
# Pinned to a specific revision — the crates.io `monty` is a 0.0.0 placeholder,
# so we depend on the workspace crate directly from git.
monty = { git = "https://github.com/pydantic/monty", rev = "8feace1a5f7335970cebe6ab3b3d2c491f820864" }

[dev-dependencies]
tempfile = "3"
# In-process HTTP mock server for integration tests (async, reqwest-friendly).
wiremock = "0.6"

